# voice

./: AGENTS.md  CLAUDE.md  Dockerfile.agent  Makefile  README.md  docker-compose.agents.yaml  docker-compose.stream.yaml  docker-compose.tts.yaml  docker-compose.yaml  livekit-deploy  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
agents/aoi/: README.md  pyproject.toml
agents/aoi/prompts/: system.md
agents/aoi/src/: __init__.py  _shared.py  agent.py
agents/aoi/tests/: test_agent.py
agents/nyla/: README.md  pyproject.toml
agents/nyla/prompts/: system.md
agents/nyla/src/: __init__.py  _shared.py  agent.py  agent_text.py
agents/nyla/tests/: test_agent.py  test_integration.py
agents/party/: README.md  pyproject.toml
agents/party/prompts/: system.md
agents/party/src/: __init__.py  agent.py
agents/party/tests/: test_agent.py
agents/sumi/: README.md  pyproject.toml
agents/sumi/prompts/: system.md
agents/sumi/src/: __init__.py  agent.py  orpheus_tts.py  voicebook_tts.py
agents/sumi/tests/: conftest.py  test_agent.py  test_llm_safety.py  test_voicebook_tts.py
agents/yua/: README.md  pyproject.toml
agents/yua/prompts/: system.md
agents/yua/src/: __init__.py  _shared.py  agent.py
agents/yua/tests/: test_agent.py
config/: langsmith-provisioning.env.example  livekit-egress.yaml.example  livekit-sip.yaml.example  livekit.env.tpl  livekit.yaml.example  secrets.env.example  signoz.env.example  sip-dispatch-nyla.json.example  sip-dispatch-party.json.example  sip-dispatch-sumi.json.example  sip-dispatch-yua.json.example  sip-inbound-trunk.json.example
config/launchd/: ai.openclaw.livekit-agent.plist.template  ai.openclaw.otel-collector.plist.template
config/otel-collector/: config.yaml.template
deploy/parakeet/: docker-compose.parakeet.yaml
docs/: AGENT-LESSONS.md  ARCHITECTURE.md  BRING-YOUR-OWN-STACK.md  DISPATCH-RULE-GOTCHAS.md  LANGSMITH.md  OBSERVABILITY.md  OPERATIONS.md  PROJECT-STATUS.md  SLICE-1-LANDING.md  SLICE-3-STT.md  SLICE-4-LLM.md  SLICE-4-SAFETY.md  SLICE-5-TTS.md  SLICE-6-LIVEKIT-PLANE.md  SLICE-7-SYNTHETIC-TURN.md  SUMI-INTEGRATION-MAP.md  VOICE-TOOL-HARNESS.md  twilio-trunk.md
ops/: __init__.py
ops/langsmith/: README.md  __init__.py  client.py  projects.py  provision.py
ops/langsmith/datasets/: __init__.py  cross_modal_recall.py  golden_recall.py
ops/langsmith/prompts/: recall_accuracy_judge.md  tool_choice_judge.md
ops/langsmith/tests/: test_provision.py
ops/signoz/dashboards/: README.md
scripts/: agent-entrypoint.sh  assert_stream_compose.py  bootstrap.sh  cycle-agents.sh  deploy-agents.sh  health-check.sh  install-host-otel-collector.sh  migrate-project-ownership.sh  migrate-stream-slice1.sh  register-sip-routing.sh  selftest-migrate-slice1.sh  selftest-project-ownership.sh  signoz-admin.sh  signoz-import-dashboards.sh  signoz-wire-gateway.sh  signoz.sh  synthetic-turn.py  tail-logs.sh  teardown-agents.sh  test-stream-compose.sh  trace-check.sh  truncate-logs.sh  verify-bearers.sh
scripts/lib/: livekit-env.sh  tool-path.sh
sdk/: README.md  TODO.md  pyproject.toml
sdk/scripts/: loki_smoke_check.py  text_simulator.py  voice_tool_harness.py
sdk/src/sdk/: audio_recording.py  bearer_identity.py  cli_spawner.py  config.py  constants.py  duplex.py  env.py  langsmith_processor.py  livekit_otel_enricher.py  liveness.py  musubi_client.py  musubi_v2_client.py  openclaw_hooks.py  postcall.py  postcall_memory.py  sip_preflight.py  telemetry.py  telephony.py  trace.py  tracing.py  transcript.py
sdk/tests/: conftest.py  test_agent_entrypoint.py  test_audio_recording.py  test_base_agent.py  test_bearer_is_the_agent.py  test_cli_spawner.py  test_composition.py  test_config.py  test_constants.py  test_dead_air_is_never_healthy.py  test_half_duplex_opens_the_loop.py  test_health_check_reports_reality.py  test_identity_is_one_source.py  test_imports.py  test_langsmith_processor_local_delta.py  test_livekit_otel_enricher.py  test_musubi_client.py  test_musubi_live_smoke.py  test_musubi_v2_client.py  test_openclaw_hooks.py  test_ops_surface_runs_from_a_clean_shell.py  test_postcall.py  test_postcall_memory.py  test_shutdown_flush_does_not_block.py  test_telemetry_flow.py  test_telemetry_langsmith_flow.py  test_telephony.py  test_tools_core.py  test_tools_household.py  test_tools_memory.py  test_tools_sessions.py  test_tracing.py  test_voice_tool_harness.py
services/voicebook-stream/: Dockerfile  QUALIFICATION-FINDINGS.md  QUALIFICATION.md  README.md  pyproject.toml  registry.example.json
services/voicebook-stream/src/voicebook_stream/: __init__.py  app.py  lease.py  server.py  synth.py
services/voicebook-stream/tests/: test_lease.py  test_routes.py  test_synth.py
services/voicebook-tts/: Dockerfile  QUALIFICATION.md  README.md  pyproject.toml
services/voicebook-tts/ops/: DEPLOYMENT.md  hermes-adapter-voicebook-tts.py  voicebook-fw.service
services/voicebook-tts/src/voicebook_tts/: __init__.py  app.py  registry.py  server.py  synth.py
services/voicebook-tts/tests/: test_adapter.py  test_service.py
tools/: README.md  pyproject.toml
tools/src/tools/: __init__.py  academy.py  base_agent.py  core.py  household.py  memory.py  sessions.py
tools/tests/: test_catalog_cannot_lie.py  test_composition_is_explicit.py  test_persona_is_identity.py  test_time_is_where_eric_is.py
