[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdk"
version = "0.1.0"
description = "Shared runtime for the voice agents — telemetry, trace, transcript, post-call, config, clients"
requires-python = ">=3.11,<3.13"
dependencies = [
    "livekit-agents~=1.5",
    "aiohttp",
    "langsmith>=0.7.38",
    "python-dotenv",
    # OTel tracing → LangSmith. Always installed (small wheels) so the
    # tracing path is one env-var flip away rather than a re-sync. The
    # exporter activates only when LANGSMITH_TRACING=true.
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.packages.find]
where = ["src"]
