[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdk"
version = "0.1.0"
description = "Shared runtime for the voice agents — telemetry, trace, transcript, post-call, config, clients"
requires-python = ">=3.11,<3.13"
dependencies = [
    "livekit-agents~=1.5",
    "aiohttp",
    "langsmith>=0.7.38",
    "python-dotenv",
    # OTel tracing → LangSmith / Phoenix / Honeycomb / Datadog / SigNoz.
    # The vendor-neutral OTel pipeline activates whenever
    # OPENCLAW_OTEL_ENABLED (or legacy LANGSMITH_TRACING) is true.
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    # Auto-instrument outbound HTTP so Musubi v2 / gateway / weather
    # calls surface as child http.client spans under whichever tool is
    # active. Disable via OPENCLAW_OTEL_HTTP_INSTRUMENTATION=false.
    "opentelemetry-instrumentation-aiohttp-client>=0.48b0",
    "opentelemetry-instrumentation-requests>=0.48b0",
    # OTel logs pipeline: when OPENCLAW_OTEL_LOGS_ENABLED=true (or
    # the otlp exporter is configured), Python `logging` records ship
    # as OTLP log records to backends that accept them (SigNoz, Loki
    # via OTel collector, Datadog Logs, etc.). LangSmith does NOT
    # accept OTel logs — see docs/OBSERVABILITY.md.
    "opentelemetry-instrumentation-logging>=0.48b0",
    # OTel metrics pipeline: feeds the SigNoz LiveKit dashboard's
    # "HTTP Request Duration" panel and any custom application
    # counters/histograms. Auto-enabled when an OTLP exporter is on.
    "opentelemetry-instrumentation-system-metrics>=0.48b0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.packages.find]
where = ["src"]
