[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdk"
version = "0.1.0"
description = "Shared runtime for the voice agents — telemetry, trace, transcript, post-call, config, clients"
requires-python = ">=3.11,<3.13"
dependencies = [
    "livekit-agents~=1.5",
    "aiohttp",
    "python-dotenv",
    # OTel tracing → vendor-neutral OTLP/HTTP. The
    # pipeline activates whenever VOICE_OTEL_ENABLED is true.
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    # Auto-instrument outbound HTTP. Our LiveKit Grafana dashboard's
    # "HTTP Request Duration" panel reads `http.client.duration` from
    # these instrumentors. httpx covers the openai + google.genai
    # plugins; aiohttp covers elevenlabs; requests covers everything
    # else. Disable via VOICE_OTEL_HTTP_INSTRUMENTATION=false.
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-aiohttp-client>=0.48b0",
    "opentelemetry-instrumentation-requests>=0.48b0",
    # OTel logs pipeline: ships Python `logging` records as OTLP log
    # records with trace correlation. Backends such as Loki use these.
    "opentelemetry-instrumentation-logging>=0.48b0",
    # OTel metrics pipeline: feeds SystemMetrics + http.client.duration
    # histograms (visible via Mimir-backed Grafana panels). Auto-enabled
    # when an OTLP exporter is on.
    "opentelemetry-instrumentation-system-metrics>=0.48b0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.packages.find]
where = ["src"]
