[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tools"
version = "0.1.0"
description = "Voice agent tool mixins — browseable catalog of @function_tool capabilities"
requires-python = ">=3.11,<3.13"
dependencies = [
    "sdk",
    "livekit-agents~=1.6.5",
    "aiohttp",
]

[tool.uv.sources]
sdk = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1",
]

# Tool tests live in ../sdk/tests (test_tools_core.py, test_tools_memory.py,
# test_composition.py) — they exercise this package across the workspace
# boundary via the shared venv. There is no in-package suite yet, so
# `cd tools && pytest` reports "no tests ran" (exit 5), not a green pass.
[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.packages.find]
where = ["src"]
