[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sumi"
version = "0.1.0"
description = "Sumi voice agent — forked from Party; identity/package scaffold (local pipeline wired in Slices 3-5)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "sdk",
    "tools",
    "livekit-agents[openai,google,silero]~=1.6.5",
    "livekit-plugins-elevenlabs~=1.5",
    "livekit-plugins-nvidia~=1.6.5",
]

[tool.uv.sources]
sdk = { workspace = true }
tools = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.packages.find]
where = ["src"]
