[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voicebook-tts"
version = "0.1.0"
description = "Persistent Qwen Base service: speaks a girl's accepted voicebook master as new text"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2",
]

# The GPU runtime (torch/torchaudio/qwen-tts) is DELIBERATELY NOT declared here.
# It lives only in the service image. Adding it would force cu128 torch into
# every root `uv sync`, and a package install silently clobbering a verified
# cu128 environment is a defect this repo has already been bitten by three
# times in one day. See docs/AGENT-LESSONS.md.
[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]
